--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	<section id="contact">
 		<h2>联系我们</h2>
 		<p>畅玩服务器联系我们wanglaoshuai720820@163.com，或者申诉的请联系wanglaoshuai720820@163.com.加入官方QQ群906958572掌握更多信息。</p >
+		<a href="https://wanglaoshuai.wlssde.top/" target="_self">点击回到新版（新官网）</a>
 	</section>
 <div>Copyright &copy;2024 <a target="_red" style="color:#FF">王老帅与荔枝ofMCserver保留一切权力</a>. All Rights Reserved</div>
 			</div>
