--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>　　　　　　　　　　王老帅与荔枝ofMCserver官网（试运行）　　　　　　　　　　　　　　　　　　　　　　　　　　　</title>
+	<title>　　　　　　　　　　王老帅与荔枝ofMCserver官网和超绝生电服务器官网（试运行）　　　　　　　　　　　　　　　　　　　　　　　　　　　</title>
 	<style>
 		body background="image.jpg"
 		
@@ -53,9 +53,10 @@
 	</section>
 	<section id="about">
 		<h2>我为什么要开好一个服务器？</h2>
-		<p>1.我个人与我朋友联机太麻烦了，本地电脑要开，于是我想开个服务器并邀请了我兄弟当副腐竹</p >
+		<p>1.我个人与我朋友联机太麻烦了，本地电脑要开，于是我想开个服务器并邀请了我兄弟当副腐竹；机械动力服务器是1.19.2（模组服）超绝生电服务器是1.21.4（原版服）</p >
 	</section>
 	<section id="services">
+		<h2>本服可以通过 wls.wlssde.top 这个域名进入</h2>
 		<h2>服务器简短的规则</h2>
 		<p>1.不要开挂、不要作弊、平等的对待任何人.</p >
 	</section>
@@ -70,3 +71,4 @@
 			</div>
 </body>
 </html>
+
