--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
 		<p>畅玩服务器联系我们wanglaoshuai720820@163.com，或者申诉的请联系wanglaoshuai720820@163.com.加入官方QQ群906958572掌握更多信息。</p >
 		<a href="https://wanglaoshuai.wlssde.top/" target="_self">点击回到新版（新官网）</a>
 		<a href="https://hao.wlssde.top/">点击前往我们的导航网站</a>
+		<a href="https://wanglaoshuai.github.io/superban/">点击前往服务器封禁名单</a>
 		<a href="https://fanqienovel.com/reader/7504991677480698393?source=seo_fq_juhe">点击前往羊习习作者写的小说</a>
 	</section>
 <div>Copyright &copy;2024 <a target="_red" style="color:#FF">王老帅与荔枝ofMCserver保留一切权力</a>. All Rights Reserved</div>
 			</div>
 </body>
 </html>
+
 
