--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
 		<a href="https://wanglaoshuai.github.io/superban/">点击前往服务器封禁名单</a>
 		<a href="https://fanqienovel.com/reader/7504991677480698393?source=seo_fq_juhe">点击前往羊习习作者写的小说</a>
 	</section>
+	<div>Copyright <a target="_red" style="color:#FF">免责声明：Minecraft"和"我的世界"版权归Mojang Studios所有，本站与Mojang，微软公司没有任何从属关系。</a>. </div>
 <div>Copyright &copy;2024 <a target="_red" style="color:#FF">王老帅与荔枝ofMCserver保留一切权力</a>. All Rights Reserved</div>
 			</div>
 </body>
 </html>
+
 
 
 
